force-app/main/default/objects/Custom_Link_Attachment__c/Custom_Link_Attachment__c.object-meta.xml
<CustomObject>
    <description>Custom Link object referencing documents stored outside of Salesforce, such as SharePoint, that also allows notes and attachments.</description>
    <label>Custom Link and Attachment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Links and Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>