force-app/main/default/objects/Custom_Link_Attachment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Links and Attachments</relationshipLabel>
    <relationshipName>Custom_Links_and_Attachments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>