force-app/main/default/objects/Custom_Link_Attachment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of linked document or attachment</description>
    <inlineHelpText>Description of linked document or attachment</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>