force-app/main/default/objects/Custom_Link_Attachment__c/fields/Link_Directory_File__c.field-meta.xml
<CustomField>
    <fullName>Link_Directory_File__c</fullName>
    <description>This is a hyper link called &quot;View&quot; created through a formula that will take you to the network or local file in the Link Path field</description>
    <formula>HYPERLINK(&quot;file://&quot;&amp;Link_Path__c,&quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click &quot;View&quot; to go to the location showing in the Link Path field</inlineHelpText>
    <label>View Directory File</label>
    <type>Text</type>
</CustomField>