force-app/main/default/objects/Custom_Link_Attachment__c/fields/Link_Path__c.field-meta.xml
<CustomField>
    <fullName>Link_Path__c</fullName>
    <description>This is the path (outside of salesforce) where the document is located. For example: The path to the folder and document on a Share Drive</description>
    <inlineHelpText>This is the field used to capture the path (outside of salesforce) where a document is located. For example: The path to the folder and document on a Share Drive</inlineHelpText>
    <label>Link Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>