force-app/main/default/objects/Custom_Link_Attachment__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <description>This is the URL where the document is located. For example: Sharepoint.</description>
    <inlineHelpText>This is the URL to a website, not a network or local file folder. Clicking on the Link will open a new browser and go to the site.</inlineHelpText>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>