force-app/main/default/objects/Custom_Link_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is to Indicate whether there is a link to another document location or whether the document is attached for display purposes in related list</description>
    <inlineHelpText>Indicates whether this is a link to another document location or an attachment</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>